# AmzReviewTrendsPOC

./: Makefile  README.md  et --hard 64de12a  pyproject.toml  requirements.txt
AmzReviewTrendsPOC/: __init__.py  dataset.py  features.py  plots.py
AmzReviewTrendsPOC/data/: get_product_info.py  get_product_info_from_asin.py  load_and_clean_hist_reviews.py
AmzReviewTrendsPOC/features/: topic_modelling_bert.py
AmzReviewTrendsPOC/modeling/: find_indirect_marketing.py  predict.py  product_review_lifecykle.py  train.py
AmzReviewTrendsPOC/visualize/: app.py  plot_topics_static.py
docs/: mkdocs.yml
docs/docs/: index.md
models/bert_basic/: ctfidf_config.json  topic_embeddings.safetensors
reports/: slides_draft.md
reports/figures/: test_timeline.html  yoga_mat.html
reports/figures/flow_diagramms/: batch_process.puml  rag_pipeline.puml
reports/figures/product_cykles/: B00BR1FSU8.html  B00O0CK2UM.html  B00XQBHJOU.html
