[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "AmzReviewTrendsPOC"
version = "0.0.1"
description = "This project is a proof of concept (POC) aimed at discovering and analyzing trending topics in Amazon customer reviews for health and personal care products. Using a sample dataset of review texts, ratings, and other details, the module processes the data in batches to identify key themes and trends. The goal is to provide Amazon with valuable insights that can help improve their products and make better business decisions. The results are summarized in a clear and engaging way, making it easy for stakeholders to understand and act on the findings."
authors = [
  { name = "Felix Schilling" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["AmzReviewTrendsPOC"]
force_sort_within_sections = true
